@@ -14,3 +14,4 @@
 #  limitations under the License.
 org.apache.tika.server.core.config.PasswordProviderConfig
 org.apache.tika.server.core.config.DocumentSelectorConfig
+org.apache.tika.server.core.config.TimeoutConfig
